:+1: Implement download task logic
